--- a/alten.frontend/package.json
+++ b/alten.frontend/package.json
@@ -30,8 +30,8 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "2.4.1",
     "googleapis": "19.0.0",
-    "jquery": "3.2.1",
-    "moment": "2.18.1",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "perfect-scrollbar": "1.1.0",
     "rxjs": "5.4.2",
     "socket.io-client": "^2.0.4",
