--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   test-driver-service:
     docker:
       - image: circleci/node:10
-    working_directory: ~/driver-service
+    working_directory: ~/repo
     steps:
       - checkout
       - restore_cache:
@@ -23,7 +23,7 @@ jobs:
   test-monitoring-service:
     docker:
       - image: circleci/node:10
-    working_directory: ~/monitoring-service
+    working_directory: ~/repo
     steps:
       - checkout
       - restore_cache:
@@ -43,7 +43,7 @@ jobs:
   test-vehicle-service:
     docker:
       - image: circleci/node:10
-    working_directory: ~/vehicle-service
+    working_directory: ~/repo
     steps:
       - checkout
       - restore_cache:
