--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,12 @@ jobs:
   test-driver-service:
     docker:
       - image: circleci/node:10
-    working_directory: ~/repo
+    working_directory: ~/driver-service
     steps:
       - checkout
+      - run:
+          name: Change Directory
+          command: cd alten.backend/services/driver-service
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
