--- a/alten.backend/services/driver-service/package.json
+++ b/alten.backend/services/driver-service/package.json
@@ -4,7 +4,7 @@
   "description": "a microservice for the driver module that will handle all the crud , operations related to the drivers",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec src/**/*.spec.js",
+    "test": "mocha -R spec src/**/*.spec.js --exit",
     "start": "node src/index.js",
     "lint": "standard --verbose | snazzy"
   },
