--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,12 @@ workflows:
       - test-driver-service
       - test-monitoring-service
       - test-vehicle-service
-      - deploy-to-staging
-        
+      - deploy-to-staging:
+         requires:
+          - test-driver-service
+          - test-monitoring-service
+          - test-vehicle-service
+         filters:
+           branches:
+            only: master
       
